# E2E-Keyword-Spotting

./: .gitignore  AecActivity.java  CHANGELOG.md  LICENSE  README.md  Test.txt  app.py  config.py  environment.yml  opts.py  pyproject.toml  requirements-space.txt  requirements.txt  train.py
.github/: pull_request_template.md
checkpoints/: README.md
configs/: demo_mamba_tuned.yaml  demo_mhatt_base.yaml  demo_mhatt_small.yaml  demo_mhatt_small_focus.yaml  demo_mhatt_small_focus_lod.yaml  demo_mhatt_small_focus_v3.yaml  demo_mhatt_small_focus_v4.yaml  demo_mhatt_small_focus_verifier.yaml  demo_mhatt_small_focus_verifier_reduced.yaml  quick_mamba.yaml  quick_mhatt.yaml  smoke_mamba.yaml  smoke_mhatt.yaml  train_mamba.yaml  train_mhatt.yaml  verifier_mini.yaml
data/: README.md
datasets/: speech_commands_dataset.py
docs/: public-release.md  public_demo_release_checklist.md  public_release_v3.md
scripts/: bootstrap_env.sh  build_public_assets.py  check_hf_space.py  collect_phase5_round_summary.py  cutover_hf_space.py  deploy_hf_space.py  derive_round2_detector_config.py  download_hi_mia.sh  generate_release_assets.py  import_hi_mia_bundle.sh  install_public_checkpoints.sh  prepare_hi_mia_bundle.sh  prepare_release_v3.sh  prepare_speech_commands.py  release_public_demo.sh  render_release_demo_gif.py  run_demo_training.sh  run_quick.sh  run_smoke.sh  run_submission.sh  select_demo_checkpoint.py
space/: README.md
tests/: test_data_audit.py  test_data_integrity.py  test_demo_accuracy_first.py  test_demo_analyze_checkpoint.py  test_demo_auto_gain.py  test_demo_ema.py  (+47 more)
(+83 files in other folders)
